# ff-node-monitor

./: .editorconfig  .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  Rocket.toml.dist  ff-node-monitor.service  rust-version
.github/workflows/: ci.yml
migrations/2018-05-14-165406_v0/: down.sql  up.sql
migrations/2020-06-28-225500_v1/: down.sql  up.sql
src/: action.rs  config.rs  cron.rs  db.rs  db_conn.rs  email.rs  main.rs  models.rs  routes.rs  schema.rs  serde_enum_number.rs  util.rs
static/: style.css
templates/: action_error.html.hbs  confirm_action.eml.hbs  cron_error.txt.hbs  index.html.hbs  list.html.hbs  list_error.html.hbs  notification.eml.hbs  notification.hbs  prepare_action.html.hbs  prepare_action_error.html.hbs  run_action.html.hbs
templates/partials/: page.html.hbs
vagrant/: .gitignore  Vagrantfile  bootstrap.sh  vagrant.config.dist
