[package]
name = "ff-node-monitor"
version = "0.1.0"
authors = ["Ralf Jung <post@ralfj.de>"]
edition = "2018"

[profile.release]
overflow-checks = true

[dependencies]
rocket = "0.4.1"
rocket_contrib = { version = "0.4", features = ["handlebars_templates", "diesel_postgres_pool"] }
diesel = { version = "1.3", features = ["postgres"] }
diesel_migrations = "1.3"
ring = "0.13" # tied to 0,13 due to Rocket
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
rmp-serde = "0.13.7"
failure = "0.1.1"
url = "1.7.0"
url_serde = "0.2.0"
toml = "0.4.6"
base64 = "0.10"
hex = "0.3.2"
reqwest = "0.9"
chrono = { version = "0.4.2", features = ["serde"] }
mail = { version = "0.6.7", features = ["smtp"] }
futures = "0.1"
uuid = "0.7.3"
