[package]
name = "ff-node-monitor"
version = "0.1.0"
authors = ["Ralf Jung <post@ralfj.de>"]
edition = "2018"

[profile.release]
overflow-checks = true

[dependencies]
rocket = "0.4.1"
rocket_contrib = { version = "0.4", features = ["handlebars_templates", "diesel_postgres_pool"] }
diesel = { version = "1.3", features = ["postgres"] }
diesel_migrations = "1.3"
ring = "0.13" # tied to 0,13 due to Rocket
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
rmp-serde = "1"
anyhow = "1.0.31"
thiserror = "1.0"
url = { version = "2.2", features = ["serde"] }
toml = "0.4.6" # cannot use 0.5 due to Rocket
base64 = "0.13"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["blocking"] }
chrono = { version = "0.4.2", features = ["serde"] }
mail = { version = "0.7", features = ["smtp"] }
futures = "0.1" # cannot use newer version due to mail
uuid = { version = "1.0", features = ["v4"] }
