[package]
name = "ff-node-monitor"
version = "0.1.0"
authors = ["Ralf Jung <post@ralfj.de>"]
edition = "2021"

[profile.release]
overflow-checks = true

[dependencies]
rocket = "0.5"
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
rocket_sync_db_pools = { version = "0.1.0", features = ["diesel_postgres_pool"] }
diesel = { version = "2.0", features = ["postgres"] }
diesel_migrations = "2.0"
ring = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
rmp-serde = "1"
anyhow = "1.0.31"
thiserror = "1.0"
url = { version = "2.2", features = ["serde"] }
base64 = "0.21"
hex = "0.4.3"
reqwest = { version = "0.11", features = ["json"] }
chrono = { version = "0.4.2", features = ["serde"] }
mail = { version = "0.7", features = ["smtp"] }
futures = "0.1" # cannot use newer version due to mail
uuid = { version = "1.0", features = ["v4"] }
